<resources>
    <string name="cancel">Annulla</string>
    <string name="save">Salva</string>
    <string name="saving_image">Salvataggio in corso...</string>
    <string name="preparing_card">Attendere prego...</string>
    <string name="no_storage_card">Nessuna scheda di archiviazione</string>
    <string name="not_enough_space">Spazio insufficiente</string>
    <string name="portaelementi">Scatola porta elementi</string>
    <string name="coperchio">Coperchio</string>
    <string name="stato_aperto_accettato">Aperto o accettato</string>
    <string name="stato_aperto">Aperto</string>
    <string name="stato_accettato">Accettato</string>
    <string name="stato_rifiutato">Rifiutato</string>
    <string name="stato_chiuso">Chiuso</string>
    <string name="messaggio_vai_al_sito">Visita il sito xxxxxxx per maggiori informazioni e opportunità</string>
    <string name="messaggio_abbonamento">Con l\'abbonamento potrai usufruire di tutte le funzioni di RVel (esportazioni in Excel, inserimenti illimitati). L\'abbonamento costa %1$s al mese.</string>
    <string name="messaggio_abbonamento_scaduto">Verifica lo stato di attivazione del servizio completo</string>
    <string name="messaggio_abbonamento_scaduto_2">Potrai continuare ad utilizzare il servizio completo per 10 giorni dopo</string>
    <string name="messaggio_registrazione">La registrazione del tuo account è gratuita ed è necessaria per utilizzare il programma</string>
    <string name="messaggio_non_modificabile">Dato non modificabile</string>
    <string name="messaggio_licenza_inserimenti">Con la versione light di RVel non è possibile effettuare ulteriori inserimenti.\nPer ulteriori informazioni invia una email a xxxxxxx o visita il sito xxxxxxx.\nIn alternativa puoi eliminare alcuni elementi esistenti per consentire un nuovo inserimento.</string>
    <string name="messaggio_licenza_funzionalita">Con la versione light di RVel non è possibile utilizzare questa funzione.\nPer maggiori informazioni invia una email a xxxxxxx o visita il sito xxxxxxx.</string>
    <string name="messaggio_componenti">Verranno aggiunti i seguenti componenti</string>
    <string name="messaggio_composizione">Salvare i dati e passare alla configurazione?</string>
    <string name="messaggio_seleziona_inserisci_codice">Seleziona o digita un nuovo codice</string>
    <string name="messaggio_variazione_linea">Se confermi la modifica alla connessione, tutti i codici associati nei preventivi/ordini aperti verranno sostituiti con quelli della nuova connessione. Confermi?</string>
    <string name="messaggio_variazione_placche">Se riapri il preventivo/ordine, le placche verranno ricalcolate in base alle placche correnti delle varie aree. Confermi?</string>
    <string name="messaggio_associazione_codici_preventivo">Associare automaticamente i codici articolo al preventivo?</string>
    <string name="messaggio_associazione_codici_ordini">Associare automaticamente i codici articolo all\'ordine?</string>
    <string name="messaggio_trasformazione_preventivi">Convertire il preventivo in ordine?</string>
    <string name="messaggio_metri_cavo_da_tubo">Metri di cavo ricavati dal tubo che collega i due elementi selezionati</string>
    <string name="messaggio_salvataggio_preferito_in_corso">Salvataggio preferito locale in corso...</string>
    <string name="messaggio_salvataggio_preferito">Salvataggio preferito locale completato</string>
    <string name="messaggio_importazione_locale_elementi">Sovrascrivere la forma e gli elementi dell\'area con quelli delle aree selezionate?</string>
    <string name="messaggio_importazione_locale_forma">Sovrascrivere la forma dell\'area con quella delle aree selezionate?</string>
    <string name="messaggio_salvataggio_eseguito">Salvataggio eseguito</string>
    <string name="messaggio_caricamento_in_corso">Caricamento in corso...</string>
    <string name="messaggio_creazione_report">Creazione report in corso...</string>
    <string name="messaggio_sostituzione_scatola_relazioni">La scatola incassata può essere sostituita solo con una delle stesse dimensioni perché sono presenti collegamenti e/o connessioni</string>
    <string name="messaggio_eliminazione_frutto_relazioni">Per eliminare il componente è necessario eliminare prima le Connessioni</string>
    <string name="messaggio_selezione_account">Seleziona un account Google tra quelli presenti sul dispositivo.</string>
    <string name="messaggio_backup_ok">Backup del database completato nella cartella RVEL\\backup</string>
    <string name="messaggio_backup_ko">Backup del database non riuscito</string>
    <string name="messaggio_ripristino_ok">Ripristino del database completato</string>
    <string name="messaggio_ripristino_ko">Ripristino del database non riuscito</string>
    <string name="messaggio_attivazione_non_riuscita">Attivazione non riuscita, controlla il codice inserito.</string>
    <string name="messaggio_licenza_non_attiva">Licenza non attivata</string>
    <string name="messaggio_conferma_reset">Confermare l\'eliminazione di tutti i dati eConTab sul dispositivo? Dopo l\'eliminazione sarà sufficiente eseguire una normale sincronizzazione per importare i dati del server.</string>
    <string name="messaggio_nessun_tubo_selezionato">Per questo cavo non è stato selezionato alcun tubo. Procedere con il salvataggio comunque?</string>
    <string name="messaggio_cavi_passanti">Per questo tubo passano in totale</string>
    <string name="messaggio_associazione_linea">Alla conferma, l\'elemento %s verrà associato alla linea selezionata</string>
    <string name="messaggio_selezione_ordine">Seleziona almeno un ordine</string>
    <string name="messaggio_solo_un_attimo">Un momento prego...</string>
    <string name="messaggio_guida">Puoi consultare la guida in qualsiasi momento cliccando sul pulsante GUIDA nel menu principale</string>
    <string name="messaggio_composizoni_mancanti">Devi aggiungere almeno un componente all\'elemento selezionato</string>
    <string name="errore_inserimento">Errore nell\'inserimento. Il record è probabilmente già presente</string>
    <string name="errore_selezione_cliente">Seleziona un cliente</string>
    <string name="errore_elemento_non_trovato">Elemento non trovato</string>
    <string name="errore_selezione_linea">Seleziona la Linea</string>
    <string name="errore_selezione_udm">Seleziona l\'unità di misura</string>
    <string name="errore_selezione_fornitore">Seleziona il Fornitore</string>
    <string name="errore_selezione_iva">Seleziona il Codice IVA</string>
    <string name="errore_selezione_cantiere">Seleziona un cantiere</string>
    <string name="errore_selezione_ordine">Seleziona un ordine</string>
    <string name="errore_posti_ospitati">Inserisci i posti ospitati</string>
    <string name="errore_posti_occupati">Inserisci i posti occupati</string>
    <string name="errore_codice_articolo_obbligatorio">Inserisci il codice articolo</string>
    <string name="errore_codice_articolo_esistente">Codice articolo già presente</string>
    <string name="errore_selezione_elemento_partenza">Seleziona l\'elemento di partenza</string>
    <string name="errore_selezione_elemento_destinazione">Seleziona l\'elemento di destinazione</string>
    <string name="errore_selezione_elemento_comando">Seleziona l\'elemento di comando</string>
    <string name="errore_selezione_componente_partenza">Seleziona il componente di partenza</string>
    <string name="errore_selezione_componente_destinazione">Seleziona il componente di destinazione</string>
    <string name="errore_selezione_componente_comando">Seleziona il componente di comando</string>
    <string name="errore_aggiornamento_dati">Errore nell\'aggiornamento dei dati</string>
    <string name="errore_connessione">Il server specificato non risponde. Controlla la connessione e l\'indirizzo URL</string>
    <string name="errore_connessione_play_store">Impossibile recuperare le informazioni. Controlla la connessione internet e riprova.</string>
    <string name="abbonati">Richiedi informazioni</string>
    <string name="abbonati_periodo_prova">I primi 15 giorni sono gratuiti e puoi annullare l\'abbonamento in qualsiasi momento!</string>
    <string name="accedi">Accedi</string>
    <string name="action_settings">Configurazione generale</string>
    <string name="aggiornamento_dati">Aggiornamento dati</string>
    <string name="aggiornamento_files">Aggiornamento file</string>
    <string name="aggiorna_prezzi_preventivo">Aggiorna prezzi preventivo</string>
    <string name="aggiungi_componente">Aggiungi componente</string>
    <string name="aggiungi_punto_comando">+Aggiungi punto di comando</string>
    <string name="aggiungi_punto_di_comando">Aggiungi punto di comando</string>
    <string name="aggiungi_punto_comandato">Aggiungi punto comandato</string>
    <string name="aggiungi_placca">Aggiungi placca</string>
    <string name="aliquota">Aliquota</string>
    <string name="altezza">Altezza cm</string>
    <string name="altro_materiale">Altro materiale</string>
    <string name="annulla">Annulla</string>
    <string name="app_name">Econ</string>
    <string name="area">Area</string>
    <string name="articoli_preferiti">Articoli preferiti</string>
    <string name="attenzione">Attenzione</string>
    <string name="attiva">Attiva</string>
    <string name="inserisci_codice_attivazione">Inserisci il tuo codice di attivazione</string>
    <string name="attiva_versione_business">Attiva versione business</string>
    <string name="aziende">Aziende</string>
    <string name="cambia_copriscatola">Cambia coperchio scatola</string>
    <string name="cambia_linea_locali">Cambia linea su tutti i locali</string>
    <string name="cambia_linea_solo_sul_cantiere">Cambia linea solo sul cantiere</string>
    <string name="cambia_portafrutti">Cambia portafrutti</string>
    <string name="cambia_scatola">Cambia scatola</string>
    <string name="cambia_stato">Cambia stato</string>
    <string name="cancellazione_non_possibile">L\'elemento non può essere eliminato perché è utilizzato %s volte</string>
    <string name="cancellazione_non_possibile_azienda">L\'azienda non può essere eliminata perché ci sono %s cantieri</string>
    <string name="cancellazione_non_possibile_cliente">Il cliente non può essere eliminato perché ci sono %s cantieri</string>
    <string name="cancellazione_non_possibile_cantiere">Il cantiere non può essere annullato perché ci sono %s preventivi/ordini</string>
    <string name="cantiere">Cantiere</string>
    <string name="cap_citta_provincia">CAP / Città / Provincia</string>
    <string name="cerca">Cerca</string>
    <string name="reset_filtri">Reset filtri</string>
    <string name="ultimi_gestiti">Ultimi 20</string>
    <string name="cliente">Cliente</string>
    <string name="codice_articolo">Codice articolo</string>
    <string name="descrizione">Descrizione</string>
    <string name="fornitore">Fornitore</string>
    <string name="indirizzo">Indirizzo</string>
    <string name="linea">Linea</string>
    <string name="nota">Nota</string>
    <string name="note">Note</string>
    <string name="operatori">Operatori</string>
    <string name="prezzi_listino">Prezzi listino</string>
    <string name="prezzo_acquisto">Prz. acq. €</string>
    <string name="prezzo_listino">Prz. lis. €</string>
    <string name="sconto">Sconto</string>
    <string name="tipo">Tipo</string>
    <string name="tot_imponibile">Totale imponibile</string>
    <string name="tot_importo">Totale importo</string>
    <string name="tot_iva">Totale IVA</string>
    <string name="tipo_viaggio_andata">Viaggio andata</string>
    <string name="tipo_lavoro">Lavoro</string>
    <string name="tipo_viaggio_ritorno">Viaggio ritorno</string>
    <string name="ora_inizio">Dalle</string>
    <string name="ora_fine">Alle</string>
    <string name="durata_ore">Ore (durata)</string>
    <string name="a_costo">A costo</string>
    <string name="riga_ordine">Riga dell\'ordine</string>
</resources>