<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<LinearLayout
    android:id="@+id/campi"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/altezza_campo"
    android:orientation="vertical"
    android:padding="@dimen/margine" >

    <!-- Tipo di riga: viaggio di andata, lavoro, viaggio di ritorno (il viaggio e' solo tempo) -->
    <TextView
        android:id="@+id/textView_tipo"
        style="@style/TestoIntestazione"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tipo" />

    <RadioGroup
        android:id="@+id/radio_tipo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radio_viaggio_andata"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tipo_viaggio_andata" />

        <RadioButton
            android:id="@+id/radio_lavoro"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tipo_lavoro" />

        <RadioButton
            android:id="@+id/radio_viaggio_ritorno"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tipo_viaggio_ritorno" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView_descrizione"
        style="@style/TestoIntestazione"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margine"
        android:text="@string/descrizione" />

    <EditText
        android:id="@+id/editText_descrizione"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences|textMultiLine"
        android:maxLength="255" />

    <!-- Orari facoltativi: se ci sono entrambi, la durata si calcola e si propone agli operatori -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margine"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                style="@style/TestoIntestazione"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ora_inizio" />

            <EditText
                android:id="@+id/editText_ora_inizio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="--:--"
                android:inputType="none" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margine"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                style="@style/TestoIntestazione"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ora_fine" />

            <EditText
                android:id="@+id/editText_ora_fine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="--:--"
                android:inputType="none" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margine"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView_Ore"
                style="@style/TestoIntestazione"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/durata_ore" />

            <EditText
                android:id="@+id/editText_ore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:maxLength="5"
                android:maxLines="1" />
        </LinearLayout>
    </LinearLayout>

    <!-- Riga di manodopera (MD) dell'ordine a cui si imputano le ore: solo se il rapportino ha un ordine -->
    <LinearLayout
        android:id="@+id/linearRigaOrdine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margine"
        android:orientation="vertical" >

        <TextView
            style="@style/TestoIntestazione"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/riga_ordine" />

        <pfa.app.econtab.views.EConTabSpinner
            android:id="@+id/econtabSpinner_riga_ordine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <!-- Solo per il viaggio: se tolto, le ore restano ma non entrano nel costo -->
    <CheckBox
        android:id="@+id/checkBox_a_costo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margine"
        android:checked="true"
        android:text="@string/a_costo" />

    <!-- Operatori della riga, ognuno con le proprie ore (vedi RegoleRapportino per chi si puo' scegliere) -->
    <LinearLayout
        android:id="@+id/linearOperatori"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margine"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView_operatori"
            style="@style/TestoIntestazione"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/operatori" />

        <TextView
            android:id="@+id/textView_operatori_info"
            style="@style/TestoPiccolo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/lista_operatori"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearNote"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView_nota"
            style="@style/TestoIntestazione"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nota" />

        <EditText
            android:id="@+id/editText_nota_dett"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="255"
             />
    </LinearLayout>

</LinearLayout>
</ScrollView>
